added findings and conclusion

--- a/findings.html
+++ b/findings.html
@@ -20,7 +20,7 @@
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>Title</b></a>
+        <a class="sidenavItem" id="scrollToTop"><b>Back to top</b></a>
         <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
         <a class="sidenavItem" href="#survey" data-id="#survey">Survey</a>
         <a class="sideNavItem" href="#findings" data-id="#findings">Findings</a>
@@ -68,22 +68,68 @@
     </div>    
 
     <!--Findings-->
-    <div id="findings">Findings</div>   
+    <div class="paragraph" id="findings">
+        <h3>Findings</h3>
+        <p>The findings from our investigation primarily came from our survey, which was
+            intended to gauge public opinion and knowledge on various potato related topics
+            to gives us an idea of what we should address in our infographic. Firstly, we
+            found that the majority of respondents liked potatoes as a food and consumed
+            it on a daily to weekly basis. This highlighted the importance of our project,
+            as the ‘public’ would be affected by a decline in potato yields as a result
+            of climate change. Secondly, we discovered that while many did not currently
+            grow potatoes, over half of the respondents wanted to grow potatoes in the
+            future. As a result, we included a short guide on growing potatoes in our
+            infographic. This theme of growing potatoes was also the cornerstone of our
+            suggested strategy to address the potato crisis, by offsetting the potato
+            yields that may be lost to climate change.  Furthermore, we also investigated
+            how many people used or were aware of community gardens, which was surprisingly
+            few people. As a result, we emphasised the importance of these in our infographic,
+            encouraging people to use them in order to gain space in which to grow potatoes.
+            Finally, we also looked into the respondents' views on GMO crops, which has
+            often triggered debate in the past. We found that people were overwhelmingly
+            supportive of GMO crops, which is reassuring as these will likely be critical
+            in producing potato species that are more efficient and resistant to their climate.
+            However, this result isn’t surprising, as the survey was conducted primarily on
+            students in a science school.</p>
+        
+        <p>This leads us to a major limitation of our survey; the sample size was extremely
+            homogeneous, as most respondents were from the same class in the same school,
+            as well as the same age. Although we were able to introduce some variety into
+            the datapool by surveying older individuals such as family members, the survey
+            may not be an accurate representation of the public’s opinions. Consequentially,
+            much of the information on our website is tailored towards younger readers.</p>
+    </div> 
 
     <!--Conclusion-->
-    <div id="conclusion">Conclusion</div>
+    <div class="paragraph" id="conclusion">
+        <h3>Conclusion</h3>
+        <p>In conclusion, we found that the potato crisis would likely affect the everyday
+            person due to their frequent use of potatoes. We also realised that many people
+            are already interested in or comfortable with several proposed solutions to
+            this issue, which would likely result in a smooth implementation process if
+            initiatives are set up in the future, such as growing more potatoes or using
+            GMO crops. Ultimately, we recognise that the potato crisis isn’t going to be
+            solved overnight, and will likely take years off small-scale strategies to
+            mitigate the impacts of the crisis.</p>
+    </div>
 
     <!--Bibliography-->
-    <div id="bibliography">
+    <div class="paragraph" id="bibliography">
         <h3>Bibliography</h3>
-        <p>Devaux, A., Goffart, JP., Kromann, P. et al. The Potato of the Future: Opportunities and Challenges in Sustainable Agri-food Systems. Potato Res. 64, 681–720 (2021). Retrieved from 
-            <a href="https://doi.org/10.1007/s11540-021-09501-4">https://doi.org/10.1007/s11540-021-09501-4</a></p>
+        <p>Devaux, A., Goffart, JP., Kromann, P. et al. The Potato of the Future:
+            Opportunities and Challenges in Sustainable Agri-food Systems. Potato
+            Res. 64, 681–720 (2021). Retrieved from 
+            <a href="https://doi.org/10.1007/s11540-021-09501-4" target="_blank">
+                https://doi.org/10.1007/s11540-021-09501-4</a></p>
         <p>International Potato Center. (2018). Potato Facts and Figures. Retrieved from 
-            <a href="https://cipotato.org/potato/potato-facts-and-figures/">https://cipotato.org/potato/potato-facts-and-figures/</a></p>
+            <a href="https://cipotato.org/potato/potato-facts-and-figures/" target="_blank">
+                https://cipotato.org/potato/potato-facts-and-figures/</a></p>
         <p>International Potato Center. (2018). Case for investment: Climate change adaptation. Retrieved from 
-            <a href="https://cipotato.org/climate-change/">https://cipotato.org/climate-change/</a></p>
+            <a href="https://cipotato.org/climate-change/" target="_blank">
+                https://cipotato.org/climate-change/</a></p>
         <p>The Diggers Club. (2022). How to Grow Potatoes [Website]. Retrieved from 
-            <a href="https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes">https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes</a></p>
+            <a href="https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes" target="_blank">
+                https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes</a></p>
     </div>
 
     <script src="script.js"></script>
