--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>Title</b></a>
+        <a class="sidenavItem" id="scrollToTop"><b>Back to top</b></a>
         <a class="sidenavItem" href="#introduction" data-id="#introduction">Introduction</a>
         <a class="sidenavItem" href="#infographic" data-id="#infographic">Infographic</a>
 
