--- a/findings.html
+++ b/findings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato Conclusion</title>
+    <title>Proposal & Findings</title>
     <link rel="icon" type="image/x-icon" href="images/potato.ico">
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
