moved potato emoji

--- a/findings.html
+++ b/findings.html
@@ -141,6 +141,7 @@
         <p>Ethan&nbsp;Mole <a href="mailto:mol0005@jmss.vic.edu.au">mol0005@jmss.vic.edu.au</a></p>
         <p>Tom&nbsp;Blick <a href="mailto:bli0007@jmss.vic.edu.au">bli0007@jmss.vic.edu.au</a></p>
         <p>Connor&nbsp;Russo <a href="mailto:rus0006@jmss.vic.edu.au">rus0006@jmss.vic.edu.au</a></p>
+        <p>Click the emoji for fun: <a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></p>
         <p>&copy; 2024 The Potato Project. All rights reserved.</p>
     </footer>
 </body>
