--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--Big title-->
     <div class="parallax">
         <div class="caption">
-            <span class="border">The Potato Project <a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
+            <span class="border">The Potato Project</span>
         </div>
     </div>
 
@@ -49,6 +49,7 @@
         <p>Ethan&nbsp;Mole <a href="mailto:mol0005@jmss.vic.edu.au">mol0005@jmss.vic.edu.au</a></p>
         <p>Tom&nbsp;Blick <a href="mailto:bli0007@jmss.vic.edu.au">bli0007@jmss.vic.edu.au</a></p>
         <p>Connor&nbsp;Russo <a href="mailto:rus0006@jmss.vic.edu.au">rus0006@jmss.vic.edu.au</a></p>
+        <p>Click the emoji for fun: <a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></p>
         <p>&copy; 2024 The Potato Project. All rights reserved.</p>
     </footer>
 </body>
